--- a/diamm/templates/website/source/source_detail_block.jinja2
+++ b/diamm/templates/website/source/source_detail_block.jinja2
@@ -47,7 +47,7 @@
             {% if not content.inventory_provided %}
                 <tr>
                     <th>Inventory</th>
-                    <td>Since this source is post-1550, a complete inventory has not been supplied.</td>
+                    <td>This MS has not yet been inventoried by DIAMM. If you would like to submit an inventory, please send it to <a href="mailto:diamm@music.ox.ac.uk">diamm@music.ox.ac.uk</a></td>
                 </tr>
             {% endif %}
             {% if content.copyists %}
