Fixed: Remove extraneous slash in thumbnail

--- a/diamm/templates/website/source/source_detail_block.jinja2
+++ b/diamm/templates/website/source/source_detail_block.jinja2
@@ -139,7 +139,7 @@
     </div>
     <div class="five columns">
         {% if content.cover_image_info %}
-            <img src="{{ content.cover_image_info.url }}/full/350,/0/default.jpg" class="u-full-width"/>
+            <img src="{{ content.cover_image_info.url }}full/350,/0/default.jpg" class="u-full-width"/>
             <p>Folio {{ content.cover_image_info.label }}</p>
         {% endif %}
         {#
