Fixed: Numbers for composers and compositions
In search results it would display '0' for composers and compositions. This commit adds a check to make sure it displays this only for values > 0

--- a/diamm/templates/website/search/results/source.jinja2
+++ b/diamm/templates/website/search/results/source.jinja2
@@ -7,7 +7,12 @@
 
     {{ result.archive_s }}, {{ result.archive_city_s }}
 
-    Inventory contains {{ result.number_of_composers_i }} composers with {{ result.number_of_compositions_i }} compositions.
+    {% if result.number_of_composers_i > 0 %}
+        Inventory contains {{ result.number_of_composers_i }} composers
+        {% if result.number_of_compositions_i > 0 %}
+            with {{ result.number_of_compositions_i }} compositions.
+        {% endif %}
+    {% endif %}
 
     {% if result.identifiers_ss %}
         Other identifiers:
