--- a/diamm/templates/website/search/results/set.jinja2
+++ b/diamm/templates/website/search/results/set.jinja2
@@ -1,10 +1,6 @@
 <div>
-    <p class="upper-info"> {{ result.cluster_shelfmark_s }}</p>
+    {{ result.cluster_shelfmark_s }}
     {% if result.sources_ii %}
-    <p class="lower-info"> Source{{ result.sources_ii | length | pluralize }} it contains:
-        {% for source in result.sources_ii %}
-                <a href="{{ url('source-detail', pk=source) }}">{{ source }}</a>{{ ", " if not loop.last else "" }}
-        {% endfor %}
+        Contains {{ result.sources_ii | length }} sources.
     {% endif %}
-    </p>
 </div>
