--- a/diamm/templates/website/search/results/archive.jinja2
+++ b/diamm/templates/website/search/results/archive.jinja2
@@ -1,4 +1,4 @@
 <div>
-    <p class="upper-info"> {{ result.city_s }}, {{ result.country_s }}</p>
-    <p class="lower-info">Appears in {{ result.sources_ss | length }} source{{ result.sources_ss | length | pluralize }} </p>
+    {{ result.city_s }}, {{ result.country_s }}
+    Appears in {{ result.sources_ss | length }} source{{ result.sources_ss | length | pluralize }}
 </div>
