--- a/diamm/static/stylesheets/styles.css
+++ b/diamm/static/stylesheets/styles.css
@@ -2808,40 +2808,34 @@ form {
         background: #dd1c1a;
         color: #fdfffc; }
     .navbar .navbar-list .dropdown-content {
-      display: block;
+      display: none;
       position: absolute;
       list-style-type: none;
       background-color: #fdfffc;
       float: left;
       margin-top: 0;
       margin-left: 0;
-      width: 20rem;
+      width: 18rem;
       padding: 0; }
     .navbar .navbar-list .dropdown-content div {
-      -webkit-column-count: 3;
-      -moz-column-count: 3;
-      column-count: 3; }
+      position: relative;
+      -webkit-column-count: 2;
+      -moz-column-count: 2;
+      column-count: 2; }
     .navbar .navbar-list .dropdown-content a {
       display: block;
       margin-top: 0;
       margin-left: 0.2rem;
       padding-left: 0;
-      font-size: 0.7rem; }
-    .navbar .navbar-list .dropdown-content ul {
-      margin-left: 0.2rem; }
-    .navbar .navbar-list .dropdown-content li {
-      margin-right: 0; }
-    .navbar .navbar-list .dropdown-content-more {
+      font-size: 0.7rem;
+      padding-bottom: 0.5rem; }
+    .navbar .navbar-list .sub-pages {
       list-style-type: square;
-      margin-top: 0;
-      margin-left: 0.2rem;
-      margin-bottom: 0; }
-    .navbar .navbar-list .dropdown-content-more a {
-      color: black;
-      padding: 0.2rem 0.3rem;
-      font-size: 0.5rem;
-      text-decoration: none;
-      display: block; }
+      margin-right: 0; }
+    .navbar .navbar-list .section-title {
+      list-style-type: none; }
+      .navbar .navbar-list .section-title a {
+        font-size: 0.9rem; }
     .navbar .navbar-list .navbar-item:hover .dropdown-content {
       display: block; }
     .navbar .navbar-list .navbar-highlight {
@@ -3093,6 +3087,58 @@ ul.contribution-list li {
 
 .search-results .search-result h4 {
   margin-bottom: 0.1rem; }
+
+.login-block {
+  width: 100%; }
+  .login-block h2 {
+    text-align: center; }
+
+form.create-form {
+  display: none; }
+
+form.login, form.create-form {
+  float: left;
+  position: relative;
+  margin-top: 2rem;
+  margin-left: 2rem;
+  width: 22rem;
+  height: auto;
+  vertical-align: baseline;
+  line-height: 24px;
+  font-weight: bold;
+  text-decoration: none;
+  border-radius: 5px;
+  -webkit-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2); }
+  form.login h1, form.create-form h1 {
+    position: relative;
+    color: #011627;
+    margin-top: 0.8rem;
+    margin-left: 0.8rem;
+    font-weight: 400;
+    padding-bottom: 1rem; }
+  form.login input, form.create-form input {
+    width: 20rem;
+    display: block;
+    border: none;
+    margin-bottom: 2.2rem;
+    border-bottom: 1px solid #a9acab;
+    height: 2rem;
+    background-color: transparent;
+    -webkit-appearance: none; }
+    form.login input:focus, form.create-form input:focus {
+      color: #011627;
+      border-color: transparent;
+      border-bottom: 1px solid #a9acab; }
+  form.login #password, form.create-form #password {
+    display: none; }
+  form.login input:-webkit-autofill, form.login textarea:-webkit-autofill, form.login select:-webkit-autofill, form.create-form input:-webkit-autofill, form.create-form textarea:-webkit-autofill, form.create-form select:-webkit-autofill {
+    background-color: #fdfffc !important; }
+  form.login button, form.create-form button {
+    margin-bottom: 0.4rem; }
+  form.login a, form.create-form a {
+    font-size: 0.8rem; }
 
 .debug {
   border: 1px solid #011627; }
