--- a/diamm/templates/website/blocks/header.jinja2
+++ b/diamm/templates/website/blocks/header.jinja2
@@ -15,11 +15,12 @@
             <li class="navbar-item navbar-highlight"><a href="#">Donate</a></li>
 
             {% if user.is_authenticated() %}
-                <li class="navbar-item"><a href="{{ url('account-info') }}">Your account</a>
+                <li class="navbar-item"><a href="{{ url('user-profile', pk=user.pk) }}">Your account</a>
                     <ul class="dropdown-content">
-                        <li><a href="{{ url('account-update') }}">Update Account</a></li>
+                        {# <li><a href="{{ url('account-update') }}">Update Account</a></li>#}
                         <li>
-                            <form action="{{ url('logout') }}" method="post" id="logout_form"> {% csrf_token %}
+                            <form action="{{ url('logout') }}" method="post" id="logout_form">
+                                {% csrf_token %}
                                 <input type="submit" value="Logout" />
                             </form>
                         </li>
