--- a/diamm/templates/website/auth/register.jinja2
+++ b/diamm/templates/website/auth/register.jinja2
@@ -12,6 +12,21 @@
                 <form action="{{ url('register') }}" method="post">
                     {% csrf_token %}
                     {{ form }}
+
+                    <strong>User agreement</strong>
+                    <ul>
+                        <li>You will not communicate the password and username you are given to any other person or any third party for any reason (please apply to <a href='mailto:diamm@music.ox.ac.uk'>diamm@music.ox.ac.uk</a> for teaching/course accounts);</li>
+                        <li>You will not download, copy, redistribute or print any image obtained through the DIAMM website, nor use any image from DIAMM for a commercial purpose;</li>
+                        <li>You understand that downloading images from the DIAMM website is theft;</li>
+                        <li>You will not reproduce text from the site in any other medium apart from quoted excerpts as permitted by UK copyright law;</li>
+                        <li>You are permitted to make and publish editions and/or make recordings of music from any source accessed through the site;</li>
+                        <li>You are permitted to make links to any page of the website from any other resource or medium (please note that although every effort is made to ensure permanence of URLs, the site owner is not responsible for maintaining links outside the website should page URLs change);</li>
+                        <li>You will inform DIAMM and the manuscript owner of the relevant manuscript of any publication regarding a manuscript source, so that bibliographical information about manuscripts can be maintained;</li>
+                        <li>You will acknowledge the use of DIAMM where appropriate in any publications or distributed research;</li>
+                        <li>You will not infringe any copyright either of the manuscript owners or the image creator;</li>
+                        <li>You understand that a breach of the rights or ownership covered in this agreement may result in prosecution under UK law.</li>
+                    </ul>
+                    <label><input type="checkbox" name="user-agreement"> I agree</label>
                     <div class="g-recaptcha" data-sitekey="6Led0RYTAAAAAGXZ4815sqD0qX_h9nsQk8G_zq0b"></div>
                     <button type="submit">Create account</button>
                 </form>
