--- a/diamm/templates/website/auth/reset.jinja2
+++ b/diamm/templates/website/auth/reset.jinja2
@@ -5,8 +5,8 @@
         <div class="offset-by-five eleven columns">
             <div class="login-block">
                 <h2>Reset password</h2>
-                <form action="{{ url('reset') }}" method="post">
-                    {% csrf_token %}
+                <p>Forgotten your password? Enter your email address below, and we'll email instructions for setting a new one.</p>
+                <form method="post">{% csrf_token %}
                     {{ form }}
                     <button type="submit">Reset</button>
                 </form>
