--- a/diamm/templates/base.jinja2
+++ b/diamm/templates/base.jinja2
@@ -11,6 +11,7 @@
     {% endblock %}
 </head>
 <body>
+    {% include "website/blocks/beta_notice.jinja2" %}
     {% include "website/blocks/header.jinja2" %}
 
     <div class="full-width">
