--- a/diamm/templates/beta.jinja2
+++ b/diamm/templates/beta.jinja2
@@ -93,7 +93,7 @@
                 it is too labour intensive to record. If this is the case, we may not be able to provide that information.)
             </p>
 
-            <h3>Types of feedback NOT requestd</h3>
+            <h3>Types of feedback NOT requested</h3>
             <p>
                 There are a number of types of feedback we would ask that you not send us:
             </p>
