--- a/diamm/templates/website/blocks/header.jinja2
+++ b/diamm/templates/website/blocks/header.jinja2
@@ -6,8 +6,11 @@
             </li>
         </ul>
         <ul class="navbar-list pull-left">
-                <li class="navbar-item"><a href="/about/">About</a>
+                {# <li class="navbar-item"><a href="/about/">About</a>
                     {% include "website/aboutpages/aboutpages_menu.jinja2" %}
+                </li> #}
+                <li class="navbar-item">
+                    <a href="{{ url('introduction') }}">Introduction</a>
                 </li>
             <li class="navbar-item"><a href="{{ url('search') }}">Search</a></li>
         </ul>
