--- a/diamm/templates/website/archive/archive_list.jinja2
+++ b/diamm/templates/website/archive/archive_list.jinja2
@@ -1,10 +1,13 @@
 {% extends "base.jinja2" %}
 
 {% block body %}
-    <h1>Archive List</h1>
-    <ul>
-    {% for archive in content.results %}
-        <li><a href="{{ archive.url }}">{{ archive.name }}</a> ({{ archive.city.name }})</li>
-    {% endfor %}
-    </ul>
+    <div class="col-md-12">
+        <h1>Archive List</h1>
+        <ul>
+        {% for archive in content.results %}
+            <li><a href="{{ archive.url }}">{{ archive.name }}</a> ({{ archive.city.name }})</li>
+        {% endfor %}
+        </ul>
+        {% include "website/blocks/browse_paginator.jinja2" %}
+    </div>
 {% endblock %}
