--- a/diamm/templates/website/source/source_list.jinja2
+++ b/diamm/templates/website/source/source_list.jinja2
@@ -1,10 +1,13 @@
 {% extends "base.jinja2" %}
 
 {% block body %}
-    <h1>Source List</h1>
-    <ul>
-    {% for source in content.results %}
-        <li><a href="{{ source.url }}">{{ source.display_name }}</a></li>
-    {% endfor %}
-    </ul>
+    <div class="col-md-12">
+        <h1>Source List</h1>
+        <ul>
+        {% for source in content.results %}
+            <li><a href="{{ source.url }}">{{ source.display_name }}</a></li>
+        {% endfor %}
+        </ul>
+        {% include "website/blocks/browse_paginator.jinja2" %}
+    </div>
 {% endblock %}
