removes bootstrap css

--- a/diamm/templates/website/archive/archive_list.jinja2
+++ b/diamm/templates/website/archive/archive_list.jinja2
@@ -1,7 +1,7 @@
 {% extends "base.jinja2" %}
 
 {% block body %}
-    <div class="col-md-12">
+    <div>
         <h1>Archives</h1>
         {% for archive in content.results %}
         <div class="search-result">
