--- a/diamm/templates/website/city/city_detail.jinja2
+++ b/diamm/templates/website/city/city_detail.jinja2
@@ -1,7 +1,7 @@
 {% extends "base.jinja2" %}
 
 {% block body %}
-    <div class="col-md-12">
+    <div>
         <h1>{{ content.name }}, <a href="{{ content.country.url }}">{{ content.country.name }}</a></h1>
         <h2>Archives</h2>
         <ul>
