--- a/diamm/templates/website/city/city_list.jinja2
+++ b/diamm/templates/website/city/city_list.jinja2
@@ -1,7 +1,7 @@
 {% extends "base.jinja2" %}
 
 {% block body %}
-    <div class="col-md-12">
+    <div>
         <h1>Cities</h1>
         {% include "website/blocks/browse_alphabet.jinja2" %}
         {% for city in content.results %}
