--- a/diamm/templates/website/source/source_list.jinja2
+++ b/diamm/templates/website/source/source_list.jinja2
@@ -1,7 +1,7 @@
 {% extends "base.jinja2" %}
 
 {% block body %}
-    <div class="col-md-12">
+    <div>
         <h1>Source List</h1>
         <ul>
         {% for source in content.results %}
