--- a/diamm/templates/website/country/country_detail.jinja2
+++ b/diamm/templates/website/country/country_detail.jinja2
@@ -1,7 +1,7 @@
 {% extends "base.jinja2" %}
 
 {% block body %}
-    <div class="col-md-12">
+    <div>
         <h1>{{ content.name }}</h1>
         <h2>Cities</h2>
         <ul>
