--- a/diamm/templates/website/country/country_list.jinja2
+++ b/diamm/templates/website/country/country_list.jinja2
@@ -1,7 +1,7 @@
 {% extends "base.jinja2" %}
 
 {% block body %}
-    <div class="col-md-12">
+    <div>
         <h1>Countries</h1>
         {% for country in content.results %}
             <h4><a href="{{ country.url }}">{{ country.name }}</a></h4>
