--- a/diamm/templates/website/search/results/source.jinja2
+++ b/diamm/templates/website/search/results/source.jinja2
@@ -1,7 +1,11 @@
 <div class="search-result-description">
     {{ result.surface_type_s if result.surface_type_s else "" }}
 
-    {{ result.source_type_s }}, {{ result.date_statement_s }}
+    {% if result.source_type_s %}
+        {{ result.source_type_s }},
+    {% endif %}
+
+    {{ result.date_statement_s }}
 
     {{ result.measurements_s if result.measurements_s else "" }}
 
