--- a/diamm/static/stylesheets/_navbar.scss
+++ b/diamm/static/stylesheets/_navbar.scss
@@ -84,7 +84,8 @@
       float: left;
       margin-top: 0;
       margin-left: 0;
-      width: 18rem;
+      width: 6.2rem;
+      height: 2rem;
       padding: 0;
     }
 
