--- a/diamm/templates/website/user/profile.jinja2
+++ b/diamm/templates/website/user/profile.jinja2
@@ -1,5 +1,15 @@
 {% extends "base.jinja2" %}
 
 {% block body %}
-    <h1>Hello {{ request.user.username }}</h1>
+    <div class="row">
+        <div class="sixteen columns">
+            <h1>Hello {{ content.full_name }}</h1>
+            <p>
+                <a href="{{ url('password-change') }}">Change Password</a>
+            </p>
+            <p>
+                <a href="{{ url('user-account-edit') }}">Edit Account Details</a>
+            </p>
+        </div>
+    </div>
 {% endblock %}
