WIP: Formatting search results

--- a/diamm/templates/website/search/results/result.jinja2
+++ b/diamm/templates/website/search/results/result.jinja2
@@ -31,7 +31,7 @@
         {% if result.type == "source" and result.public_images_b %}
             <i class="fa fa-picture-o" aria-hidden="true"></i>
         {% endif %}
-        <a href="{{ result.url }}">{{ result_name(result) }}</a> <span class="result-type">{{ result.type | title }}</span>
+        <a href="{{ result.url }}">{{ result_name(result) }}</a>
     </h4>
     {{ result_body(result) }}
 </div>
